51 build data set maven (#52)
* Improvement https://github.com/tomaytotomato/location4j/issues/50

Change build process of location4j.bin to be part of the maven build lifecycle
Updated docs

* Improvement https://github.com/tomaytotomato/location4j/issues/50

Change build process of location4j.bin to be part of the maven build lifecycle
Updated docs

* Improvement https://github.com/tomaytotomato/location4j/issues/50

location4j.bin is now added to the location4j/target/generated-resources folder

* Improvement https://github.com/tomaytotomato/location4j/issues/50

location4j.bin is now added to the location4j/target/generated-resources folder

* Improvement https://github.com/tomaytotomato/location4j/issues/50

location4j.bin is now added to the location4j/target/generated-resources folder

* Improvement https://github.com/tomaytotomato/location4j/issues/50

location4j.bin is now added to the location4j/target/generated-resources folder

* Improvement https://github.com/tomaytotomato/location4j/issues/50

location4j.bin is now added to the location4j/target/generated-resources folder